# PlasmaOS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: kernel.cmake  userspace.cmake
kernel/: CMakeLists.txt  ata.c  entry.asm  ext2.c  gdt.c  gdt_asm.asm  idt.c  idt_asm.asm  limine.c  linker.ld  main.c  pit.c  pmm.c  serial.c  switch.asm  syscall.c  syscall_asm.asm  thread.c  usermode.asm  vmm.c
kernel/include/: ata.h  ext2.h  gdt.h  idt.h  kernel_limine.h  pit.h  pmm.h  serial.h  syscall.h  thread.h  vmm.h
tools/: debug-qemu.sh  make-iso.sh  run-qemu.sh
userland/: CMakeLists.txt  init.c  user.ld
